fixing overflow issue everywhere and prescription selection

--- a/frontend/src/doctor/pages/PatientDetails.css
+++ b/frontend/src/doctor/pages/PatientDetails.css
@@ -41,11 +41,11 @@
     width: 150%;
    
 }
-.row{
+/* .row{
   margin-left: 0px;
   width: 110%;
   margin-top: 10px;
-}
+} */
 .prescriptionHeader button:hover {
     background-color:  rgb(203, 121, 66);
 }
