--- a/frontend/src/patient/pages/messages/Messages.module.css
+++ b/frontend/src/patient/pages/messages/Messages.module.css
@@ -177,7 +177,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 .backArrow{
